Game/arena/compiler/GRAMMAR
// the grammar depicting the language of the arena text files

root ::= metaSpecifiers mapSpecifiers

metaSpecifiers ::= setSpecifier [musicSpecifier] [backdropSpecifier]

setSpecifier ::= SET COLN STR
backdropSpecifier ::= BACKDROP COLN STR
musicSpecifier ::= MUSIC COLN STR

mapSpecifier ::= mapping { mapping }

mapping ::= mapName COLN mapData END

mapName ::= ARENA | BACKGROUND | FOREGROUND

mapData ::= PIPE specifier { PIPE specifier }

specifier ::= [
    matrixSpecifier
    | originSpecifier
    | worldSpecifier
    | tileSpecifier
    | depthSpecifier
    | mapSpecifier
    ]

scenicSpecifier ::=
    dimensionSpecifier
    PIPE depthSpecifier

arenaDetailsSpecifier ::=  DETAIL COLN
    PIPE BACKDROP COLN STR
    PIPE MUSIC COLN STR

originSpecifier ::= ORIGIN COLN ([MINS] NUMBER COMMA [MINS] NUMBER | SAME)

matrixSpecifier ::= MATRIX COLN (NUMBER ROWS BY NUMBER COLS | SAME)

worldSpecifier ::= SIZE COLN (sizeSpecific | SAME)

tileSpecifier ::= TILES COLN ( sizeSpecific | DEFAULT | AUTO | SAME)

depthSpecifier ::= [MINS] NUMBER

sizeSpecific ::= NUMBER BY NUMBER

map ::= MAP COLN { arenaSymbol } END

foreground ::= FOREGROUND COLN arenaDetailsSpecifier map END

background ::= BACKGROUND COLN map END

arenaSymbol ::= LETTER | DOT | ASTR
